<resources>
    <string name="app_name">Clot</string>
    <string name="title_home">Home</string>
    <string name="title_orders">Orders</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="clot">Clot</string>
    <string name="skip">Skip</string>
    <string name="first_onboarding_high">Одежда, которая подчеркнет ваш <b><font color="#8E6CEF">уникальный</font></b> стиль</string>
    <string name="next">Next</string>
    <string name="first_onboarding_low">Ищете идеальную вещь? Фильтруйте предложения одним касанием. Добавляйте понравившиеся товары в избранное – мы сообщим вам о снижении цены.</string>
    <string name="second_onboarding_high"><b><font color="#8E6CEF">Будьте в тренде с CLOT:</font></b> Эксклюзивная одежда и коллаборации.</string>
    <string name="second_onboarding_low">Первыми узнавайте о новинках, лимитированных коллекциях и специальных предложениях от CLOT.</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="tell_us_about_yourself">Tell us About yourself</string>
    <string name="who_do_you_shop_for">Who do you shop for ?</string>
    <string name="how_old_are_you">How Old are you ?</string>
    <string name="age_range">Age Range</string>
    <string name="finish">Finish</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="forgot_password_reset">Forgot Password ? <b><font color="#FF000000">Reset</font></b></string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="continue_with_apple">Continue With Apple</string>
    <string name="contin">Continue</string>
    <string name="email_address">Email Address</string>
    <string name="dont_have_an_account">Dont have an Account ? <b><font color="#FF000000">Create One</font></b></string>
    <string name="create_account">Create Account</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="we_sent_you_an_email">We Sent you an Email to reset your password.</string>
    <string name="enter_email_address">Enter Email address</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="return_to_login">Return to Login</string>
    <string name="go">Go</string>
    <string name="please_enter_your_pin_code">Please enter your\nPin Code</string>
    <string name="set_up_pin">Set Up PIN</string>
    <string name="invalid_pin">Invalid PIN. Try again</string>
    <string name="pin_mismatch">PIN codes do not match</string>
    <string name="continue_text">Continue</string>
    <string name="confirm">Confirm</string>
    <string name="create_new_pin">Create your new PIN code</string>
    <string name="confirm_pin">Confirm your PIN code</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp_code">OTP Code</string>
    <string name="verify">Verify</string>
    <string name="resend_code_to">Resend code to 1:50</string>
    <string name="address">Address</string>
    <string name="cart">Cart</string>
    <string name="wishlist">Wishlist</string>
    <string name="payment">Payment</string>
    <string name="help">Help</string>
    <string name="support">Support</string>
    <string name="sign_out">Sign Out</string>
    <string name="edit">Edit</string>
    <string name="loading">Loading ...</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="your_profile_information">Your Profile Information</string>
    <string name="personal_information">Personal Information</string>
    <string name="account_number">Account Number</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="change_pin">Change Pin</string>
    <string name="change_password">Change Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="current_pin">Current PIN</string>
    <string name="new_pin">New PIN</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="edit_address">Edit Address</string>
    <string name="set_as_default_address">Set as default address</string>
    <string name="zip_code">Zip Code</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="street_address">Street Address</string>
    <string name="def">DEFAULT</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="details_payment_method">Payment Method Details</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="card_number">Card Number</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="details">Details</string>
    <string name="save_payment_method">SAVE PAYMENT METHOD</string>
    <string name="set_as_default_payment_method">Set as default payment method</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="categories">Categories</string>
    <string name="see_all">See All</string>
    <string name="top_selling">Top Selling</string>
    <string name="popular_products">Popular Products</string>
    <string name="search">Search</string>
    <string-array name="gender_options">
        <item>Men</item>
        <item>Women</item>
    </string-array>
    <string name="wish">Add to wishlist</string>
    <string name="shop_by_categories">Shop by Categories</string>
    <string name="products">Products</string>
    <string name="product_details">Product Details</string>
    <string name="category">Category</string>
    <string name="gender">Gender</string>
    <string name="shipping_amp_returns"><![CDATA[Shipping & Returns]]></string>
    <string name="free_standard_shipping_and_free_60_day_returns">Free standard shipping and free 60-day returns</string>
    <string name="reviews">Reviews</string>
    <string name="added_to_wishlist">Добавлено в избранное!</string>
    <string name="removed_from_wishlist">Удалено из избранного</string>
    <string name="wishlist_add_error">Ошибка добавления в избранное</string>
    <string name="wishlist_remove_error">Ошибка удаления из избранного</string>
</resources>