<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.clot.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.clot.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.example.clot.ui.orders.OrdersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.clot.ui.profile.ProfileFragment"
        tools:layout="@layout/fragment_profile"
        android:label="@string/title_profile">
        <action
            android:id="@+id/action_profileFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>

    <!-- Экран редактирования профиля -->
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.example.clot.ui.profile.EditProfileFragment"
        tools:layout="@layout/fragment_edit_profile"
        android:label="@string/edit_profile">

        <!-- Аргументы -->
        <argument
            android:name="username"
            app:argType="string" />
        <argument
            android:name="email"
            app:argType="string" />
        <argument
            android:name="phone"
            app:argType="string" />

<!--        &lt;!&ndash; Действия &ndash;&gt;
        <action
            android:id="@+id/action_editProfileFragment_to_changePinFragment"
            app:destination="@id/changePinFragment" />
        <action
            android:id="@+id/action_editProfileFragment_to_changePasswordFragment"
            app:destination="@id/changePasswordFragment" />-->
    </fragment>

</navigation>