<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:src="@drawable/profilepicture"/>

        <!-- Заголовок профиля -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            style="@style/btnProfile"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tvUserEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/dark_gray"
                    android:layout_marginTop="4dp"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnEditProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:layout_gravity="center"
                android:gravity="end"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:background="@android:color/transparent"
                android:textColor="@color/purple_app"/>
        </LinearLayout>

        <!-- Меню профиля -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/btnAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textAlignment="textStart"
                style="@style/btnProfile"
                android:drawableEnd="@drawable/arrowright"/>

            <Button
                android:id="@+id/btnCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cart"
                android:textAlignment="textStart"
                style="@style/btnProfile"
                android:drawableEnd="@drawable/arrowright"/>

            <Button
                android:id="@+id/btnWishlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wishlist"
                android:textAlignment="textStart"
                style="@style/btnProfile"
                android:drawableEnd="@drawable/arrowright"/>

            <Button
                android:id="@+id/btnPayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment"
                android:textAlignment="textStart"
                style="@style/btnProfile"
                android:drawableEnd="@drawable/arrowright"/>

            <Button
                android:id="@+id/btnHelp"
                style="@style/btnProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/arrowright"
                android:text="@string/help"
                android:enabled="false"
                android:textAlignment="textStart" />

            <Button
                android:id="@+id/btnSupport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/support"
                android:textAlignment="textStart"
                style="@style/btnProfile"
                android:enabled="false"
                android:drawableEnd="@drawable/arrowright"/>

        </LinearLayout>

        <!-- Кнопка выхода -->
        <Button
            android:id="@+id/btnSignOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:layout_marginBottom="40dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:background="@android:color/transparent"/>

    </LinearLayout>
</ScrollView>
