<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:onClick="navigateToSignIn"
        android:src="@drawable/arrow_back"/>

    <!-- Заголовок -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="24dp"/>

    <!-- Поле ввода email -->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:background="@color/gray"
        android:padding="10dp"
        android:hint="@string/enter_email_address"/>

    <!-- Кнопка продолжения -->
    <Button
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contin"
        style="@style/PurpleButtonStyle"
        android:layout_marginTop="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <!-- Изображение после отправки -->
        <ImageView
            android:id="@+id/imgMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sent_to_email"
            android:layout_marginBottom="20dp"
            android:visibility="gone"/>

        <!-- Сообщение после отправки -->
        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/we_sent_you_an_email"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:visibility="gone"/>

        <!-- Кнопка возврата к авторизации -->
        <Button
            android:id="@+id/btnBackToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/return_to_login"
            android:layout_marginTop="24dp"
            style="@style/PurpleButtonStyle"
            android:onClick="navigateToSignIn"
            android:visibility="gone"/>

    </LinearLayout>
</LinearLayout>