<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_pin"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_margin="20dp"
            android:textColor="@color/purple_app"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etCurrentPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/current_pin"
            style="@style/btnProfile"
            android:maxLength="4"
            android:textAlignment="textStart"
            android:padding="10dp"
            android:inputType="numberPassword"/>

        <EditText
            android:id="@+id/etNewPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_pin"
            style="@style/btnProfile"
            android:maxLength="4"
            android:textAlignment="textStart"
            android:padding="10dp"
            android:inputType="numberPassword"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/etConfirmPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_pin"
            style="@style/btnProfile"
            android:maxLength="4"
            android:textAlignment="textStart"
            android:padding="10dp"
            android:inputType="numberPassword"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/btnChangePin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_pin"
            style="@style/PurpleButtonStyle"
            android:layout_marginTop="24dp"/>

    </LinearLayout>
</ScrollView>